# CADProject

./: CMakeLists.txt  README.md
include/: Display.hpp  Draw.hpp  EulerOperation.hpp  HalfEdgeStructure.hpp  Sweep.hpp
src/: Display.cpp  Draw.cpp  EulerOperation.cpp  HalfEdgeStructure.cpp  Sweep.cpp  main.cpp
